# sedona-engine

./: .gitignore  Cargo.toml
config/: engine.toml  game.toml
crates/game/game_ecs/: Cargo.toml  build.rs
crates/game/game_ecs/src/: game.rs  game_events.rs  lib.rs  world.rs
crates/game/game_ecs/src/components/: camera.rs  entity_ref.rs  environment.rs  light.rs  material.rs  mod.rs  player.rs  sound.rs  string.rs  transform.rs  vector.rs  weather.rs
crates/game/game_ecs/src/components/model/: mesh.rs  mod.rs  node.rs  node_camera.rs
crates/game/game_ecs/src/components/world_space/: mod.rs
crates/game/game_ecs/src/entities/: camera.rs  environment.rs  light.rs  mod.rs  node.rs  player.rs  prop.rs  scene.rs  sound.rs  sound_emitter.rs  terrain.rs  weather.rs
crates/game/game_ecs/src/events/: key.rs
crates/game/game_ecs/src/systems/: asset.rs  camera.rs  chunk.rs  main.rs  mod.rs  player.rs  render.rs  serialize.rs  sky.rs  time.rs  transform.rs  weather.rs  window.rs
crates/game/game_ecs/src/utils/: conditions.rs  constants.rs  interpolation.rs  mod.rs  serialize.rs  vector_math.rs  view_uniforms.rs
crates/game/game_ecs/src/utils/gltf/: camera.rs  gltf.rs  material.rs  mesh.rs  mod.rs
crates/sedona_core/sedona_ecs/: Cargo.toml
crates/sedona_core/sedona_ecs/macros/: Cargo.toml
crates/sedona_core/sedona_ecs/macros/src/: event.rs  lib.rs
crates/sedona_core/sedona_ecs/src/: ecs_build.rs  lib.rs  macros.rs
crates/sedona_core/sedona_ecs/src/generate/: copy_trait.rs  file.rs  mod.rs  query.rs  query_default.rs  system.rs  world.rs
crates/sedona_core/sedona_ecs/src/parse/: entity.rs  mod.rs  parse.rs  query.rs  system.rs
crates/sedona_core/sedona_renderer/: Cargo.toml
crates/sedona_core/sedona_renderer/macros/: Cargo.toml
crates/sedona_core/sedona_renderer/macros/src/: lib.rs  uniform.rs
crates/sedona_core/sedona_renderer/src/: lib.rs  renderer.rs
crates/sedona_core/sedona_renderer/src/render_passes/: adaptation.rs  bloom_blur.rs  bloom_composite.rs  bloom_extract.rs  interface.rs  luminance.rs  mod.rs  object.rs  pre_pass.rs  shadow.rs  sky.rs  tone_map.rs
crates/sedona_core/sedona_renderer/src/render_resources/: blit.rs  egui.rs  layouts.rs  mod.rs  object.rs  pre_pass.rs  render_resources.rs  settings.rs  shaders.rs  shadow.rs
crates/sedona_core/sedona_renderer/src/render_resources/global/: bind_groups.rs  buffers.rs  global.rs  mod.rs
crates/sedona_core/sedona_renderer/src/render_resources/material/: material.rs
crates/sedona_core/sedona_renderer/src/types/: error.rs  lighting_profile.rs  material_layout.rs  mod.rs  pixels.rs  render_material.rs  render_node.rs  render_object.rs  shader_flags.rs  shader_key.rs  sky_mode.rs  texture_atlas.rs  uniform_buffer_object.rs  vertex_buffer_object.rs
crates/sedona_core/sedona_renderer/src/utils/: bind_group_layout.rs  defaults.rs  fallback_textures.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
crates/sedona_core/sedona_resource/: Cargo.toml
crates/sedona_core/sedona_resource/src/: lib.rs  resources.rs  ticker.rs
crates/sedona_core/sedona_settings/: Cargo.toml
crates/sedona_core/sedona_settings/macros/: Cargo.toml
crates/sedona_core/sedona_settings/macros/src/: lib.rs
crates/sedona_core/sedona_settings/src/: config_keys.rs  lib.rs  settings.rs  settings_value.rs
(+102 files in other folders)
