[package]
name = "sedona_ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.1"
heck = "0.5.0"
Inflector = "0.11.4"
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.35"
rayon = "1.10.0"
syn = { version = "2.0.51", features = ["full", "extra-traits"] }
uuid = { version = "1.17.0", features = ["serde"] }

sedona_ecs_macros = { path = "macros" }
